# ChangeLog for www-servers/nginx
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-servers/nginx/ChangeLog,v 1.22 2005/05/16 14:11:16 voxus Exp $

*nginx-0.1.31 (16 May 2005)

  16 May 2005; Konstantin Arkhipov <voxus@gentoo.org> +nginx-0.1.31.ebuild:
  Version bump. Added pcre use flag.

*nginx-0.1.30-r1 (15 May 2005)

  15 May 2005; Konstantin Arkhipov <voxus@gentoo.org> -nginx-0.1.30.ebuild,
  +files/nginx-0.1.30-slashless_path.patch, +nginx-0.1.30-r1.ebuild:
  Added slashless path patch from author.

*nginx-0.1.30 (15 May 2005)

  15 May 2005; Konstantin Arkhipov <voxus@gentoo.org> +nginx-0.1.30.ebuild:
  Version bump.

*nginx-0.1.29-r2 (14 May 2005)

  14 May 2005; Konstantin Arkhipov <voxus@gentoo.org> -nginx-0.1.29.ebuild,
  -nginx-0.1.29-r1.ebuild, +files/nginx-0.1.29-500_bytes_long.patch:
  Fixed 500 http response, when lenght of backend response 500 bytes long.
  Patch from author.

*nginx-0.1.29-r1 (13 May 2005)

  13 May 2005; Konstantin Arkhipov <voxus@gentoo.org> +nginx-0.1.29.ebuild,
  +files/nginx-0.1.29-ignore_invalid_headers.patch:
  Ability to control invalid headers ignoring. Patch from author.

*nginx-0.1.29 (13 May 2005)

  13 May 2005; Konstantin Arkhipov <voxus@gentoo.org> +nginx-0.1.29.ebuild,
  -nginx-0.1.28-r1.ebuild, nginx-0.1.28-r2.ebuild:
  Version bump and .28-r2 goes stable on both amd64 and x86.

*nginx-0.1.28-r2 (03 May 2005)

  03 May 2005; Konstantin Arkhipov <voxus@gentoo.org> +nginx-0.1.28-r1.ebuild:
  Added debug and fastcgi use flags.

  28 Apr 2005; Konstantin Arkhipov <voxus@gentoo.org> -nginx-0.1.28.ebuild,
  nginx-0.1.28-r1.ebuild:
  28-r1 goes stable on x86 and amd64.

*nginx-0.1.28-r1 (19 Apr 2005)

  19 Apr 2005; Konstantin Arkhipov <voxus@gentoo.org> +nginx-0.1.28-r1.ebuild,
  +files/nginx-0.1.28-bad_backend_header.patch:
  Patch from author to avoid crash when backend sends b0rked headers.

*nginx-0.1.28 (11 Apr 2005)
