@@ -2,10 +2,12 @@ MD5 f990623c1b2c1e33a1d3f060b521e233 nginx-0.1.31.ebuild 2075
 MD5 e020548a3311a533a4160c66e39061ff nginx-0.1.30-r1.ebuild 2080
 MD5 65987f13c01c296f08dd2b66d91f7d1f nginx-0.1.29-r2.ebuild 2061
 MD5 0b612ee125685634d4e80df6e302d442 nginx-0.1.28-r2.ebuild 2082
-MD5 f6473e6c6348f73a46f25eedcfd63fa2 ChangeLog 3971
+MD5 01c0f62033e9d8161aa1b2994fcee8da nginx-0.1.32.ebuild 2075
+MD5 0016470ed090b70df8efec12e57cf180 ChangeLog 4093
 MD5 822f3c821527e6a34f23a6a92a884766 metadata.xml 220
 MD5 1128351ac7fd6ef7b14f169b1e327518 files/nginx-0.1.30-slashless_path.patch 412
 MD5 dc573994590305f8244f0908b4067b56 files/digest-nginx-0.1.31 64
+MD5 18ea848c7776e53d7e9f8445ead94e5d files/digest-nginx-0.1.32 64
 MD5 8c7b8c93f0c4048d83df9cdc31d86e1b files/nginx 922
 MD5 964b96268e483e663e4ea13d03320185 files/digest-nginx-0.1.28-r2 64
 MD5 4e72c813c956580f61dea414fe1af8b3 files/digest-nginx-0.1.29-r2 64
