@@ -1,0 +1,1 @@
+MD5 39e42a0c1240bb281be9fbb8273a0b13 nginx-0.1.32.tar.gz 293988
