@@ -1,6 +1,11 @@
 # ChangeLog for www-servers/nginx
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-servers/nginx/ChangeLog,v 1.22 2005/05/16 14:11:16 voxus Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-servers/nginx/ChangeLog,v 1.23 2005/05/19 13:28:34 voxus Exp $
+
+*nginx-0.1.32 (19 May 2005)
+
+  19 May 2005; Konstantin Arkhipov <voxus@gentoo.org> +nginx-0.1.32.ebuild:
+  Version bump.
 
 *nginx-0.1.31 (16 May 2005)
 
